--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/demo
+quarkus.datasource.jdbc.url=jdbc:postgresql://172.22.213.95:5432/demo
 quarkus.datasource.username=admin
 quarkus.datasource.password=123456
 
-quarkus.hibernate-orm.database.generation=none
+quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
